# Point-Zero

./: CMakeLists.txt
src/: FPSCam.cpp  FPSCam.h  Game.cpp  Game.h  HUD.cpp  HUD.h  Map.cpp  Map.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  main.cpp
src/Components/: DebugController.h  Position.h
src/Core/: Camera.cpp  Camera.h  Collisions.cpp  Collisions.h
src/ECS/: ComponentArray.h  ComponentManager.cpp  ComponentManager.h  EntityManager.cpp  EntityManager.h  Registry.cpp  Registry.h
src/Utils/: BoundingBox.h  Directions.h  Input.h  Movement.h
